cargo-features = ["strip"]

[package]
name = "koradmote"
version = "0.1.0"
authors = ["Jack Newman <jack.newman12@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
strip = "symbols"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rocket = "0.4"
rocket_contrib = "0.4"
serde = {version = "1", features = ["derive"]}
serialport = "4"
rust-embed = "5"
rust-embed-rocket = {git = "https://github.com/peacememories/rust-embed-rocket"}
clap = "3.0.0-beta.2"
ka3005p = {git = "https://github.com/JackNewman12/ka3005p"}
